[package]
name = "octo-render"
version = "0.1.0"
edition = "2021"

[lib]
name = "renderer"
path = "src/renderer.rs"

[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"


[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "line_benchmark"
harness = false